# visualization.fishbmc

./: .travis.yml  CMakeLists.txt  FindOpenGLES.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
src/: .fishbmc_addon.cpp.kate-swp  analyst.cpp  analyst.h  audiobuffer.cpp  audiobuffer.h  blurengine.cpp  blurengine.h  cpudetect.cpp  fische.c  fische.cpp  fische.h  fische_internal.h  fishbmc_addon.cpp  fishbmc_addon.h  fishbmc_directx.hpp  fishbmc_opengl.hpp  screenbuffer.cpp  screenbuffer.h  vector.cpp  vector.h  vectorfield.c  vectorfield.cpp  vectorfield.h  wavepainter.cpp  wavepainter.h
visualization.fishbmc/: addon.xml  addon.xml.in  changelog.txt
visualization.fishbmc/resources/: settings.xml
visualization.fishbmc/resources/language/resource.language.af_za/: strings.po
visualization.fishbmc/resources/language/resource.language.am_et/: strings.po
visualization.fishbmc/resources/language/resource.language.ar_sa/: strings.po
visualization.fishbmc/resources/language/resource.language.az_az/: strings.po
visualization.fishbmc/resources/language/resource.language.be_by/: strings.po
visualization.fishbmc/resources/language/resource.language.bg_bg/: strings.po
visualization.fishbmc/resources/language/resource.language.bs_ba/: strings.po
visualization.fishbmc/resources/language/resource.language.ca_es/: strings.po
visualization.fishbmc/resources/language/resource.language.cs_cz/: strings.po
visualization.fishbmc/resources/language/resource.language.cy_gb/: strings.po
visualization.fishbmc/resources/language/resource.language.da_dk/: strings.po
visualization.fishbmc/resources/language/resource.language.de_de/: strings.po
visualization.fishbmc/resources/language/resource.language.el_gr/: strings.po
visualization.fishbmc/resources/language/resource.language.en_au/: strings.po
visualization.fishbmc/resources/language/resource.language.en_nz/: strings.po
visualization.fishbmc/resources/language/resource.language.en_us/: strings.po
visualization.fishbmc/resources/language/resource.language.eo/: strings.po
visualization.fishbmc/resources/language/resource.language.es_ar/: strings.po
visualization.fishbmc/resources/language/resource.language.es_es/: strings.po
visualization.fishbmc/resources/language/resource.language.es_mx/: strings.po
visualization.fishbmc/resources/language/resource.language.et_ee/: strings.po
visualization.fishbmc/resources/language/resource.language.eu_es/: strings.po
visualization.fishbmc/resources/language/resource.language.fa_af/: strings.po
visualization.fishbmc/resources/language/resource.language.fa_ir/: strings.po
visualization.fishbmc/resources/language/resource.language.fi_fi/: strings.po
visualization.fishbmc/resources/language/resource.language.fo_fo/: strings.po
visualization.fishbmc/resources/language/resource.language.fr_ca/: strings.po
visualization.fishbmc/resources/language/resource.language.fr_fr/: strings.po
visualization.fishbmc/resources/language/resource.language.gl_es/: strings.po
visualization.fishbmc/resources/language/resource.language.he_il/: strings.po
visualization.fishbmc/resources/language/resource.language.hi_in/: strings.po
visualization.fishbmc/resources/language/resource.language.hr_hr/: strings.po
visualization.fishbmc/resources/language/resource.language.hu_hu/: strings.po
visualization.fishbmc/resources/language/resource.language.id_id/: strings.po
visualization.fishbmc/resources/language/resource.language.is_is/: strings.po
visualization.fishbmc/resources/language/resource.language.it_it/: strings.po
visualization.fishbmc/resources/language/resource.language.ja_jp/: strings.po
visualization.fishbmc/resources/language/resource.language.ko_kr/: strings.po
(+29 files in other folders)
